# steam-reception-analysis

./: .gitignore  README.md  app.py  pyproject.toml  steam_reception_analysis.ipynb
data_cache/: steamspy_appdetails_top1000.json  steamspy_top1000.json
